Ingress/ingressfrontend.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  namesapace: ecommerce
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
spec:
  ingressClassName: nginx
  rules:
    - host: identity.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: identity-service  # Service for Identity
                port:
                  number: 80

    - host: orders.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: orders-service  # Service for Orders
                port:
                  number: 80

    - host: products.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: products-service  # Service for Products
                port:
                  number: 80

    - host: payments.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: payments-service  # Service for Payments
                port:
                  number: 80
